--- a/src/assets/scss/section/_header.scss
+++ b/src/assets/scss/section/_header.scss
@@ -5,32 +5,27 @@
 .header_inner{
     @include flex-between;
     background-color: rgba(16,99,99,0.1);
-    backdrop-filter: blur(15px);
     padding: 16px;
-
+    backdrop-filter: blur(15px);
     .header_logo{
         font-size: 1rem;
         text-align: center;
         text-transform: uppercase;
         line-height: 1;
-
         em{
-            font-size: 12px;
-            display: block;
-            color: var(--black100);
+        font-size: 12px;
+        display: block;
+        color: var(--black100);
         }
     }
-
     .header_nav{
-
         @media(max-width:800px){
             display: none;
 
             &.show{
                 display: block;
 
-                ul{
-                    display: block;
+                ul{ display: block;
                     position: absolute;
                     right: 0;
                     top: 72px;
@@ -39,11 +34,9 @@
                     background-color: rgba(16,99,99,0.1);
                     padding: 20px 0;
                     z-index: 10000;
-                    
                     li{
                         display: block;
                         text-align: right;
-
                         a{
                             display: inline-block;
                             padding: 10px;
@@ -51,18 +44,16 @@
                     }
                 }
             }
-            &.show + .header_nav_mobile span::before{
-                width: 20px;
-            }
-            &.show + .header_nav_mobile span::after{
-                width: 20px;
-            }
+            &.show+ .header_nav_mobile span::before{width: 20px;}
+            &.show+ .header_nav_mobile span::after{width: 20px;}
         }
+
+
+
 
         ul{
             li{
                 display: inline;
-
                 a{
                     text-transform: uppercase;
                     font-size: 14px;
@@ -71,24 +62,26 @@
 
                     &::before{
                         content: "";
-                        width: calc(100% - 28px);
+                        position: absolute;
+                        bottom: 10px;
+                        left: 14px;
+                        width: calc(100% - 30px);
                         height: 1px;
                         background-color: var(--black);
-                        position: absolute;
-                        left: 14px;
-                        bottom: 10px;
                         transform: scaleX(0);
                         transition: all 0.3s;
                         transform-origin: left center;
                     }
-                    &:hover:before{
+
+                      &:hover::before{
                         transform: scaleX(100%);
+                      }  
+
                     }
                 }
             }
         }
     }
-
     .header_nav_mobile{
         display: none;
         width: 40px;
@@ -98,7 +91,6 @@
         @media(max-width:800px){
             display: block;
         }
-
         span{
             display: block;
             width: 40px;
@@ -106,7 +98,7 @@
             background-color: var(--black);
             margin-top: 19px;
             position: relative;
-
+ 
             &::before{
                 content: "";
                 width: 40px;
@@ -116,7 +108,6 @@
                 right: 0;
                 top: 6px;
             }
-
             &::after{
                 content: "";
                 width: 40px;
@@ -127,6 +118,7 @@
                 bottom: 6px;
             }
         }
+
+
     }
 
-}
