--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,9 +1,9 @@
 @charset "utf-8";
 //setting
-@import "./setting/fonts";
+@import "./setting/font";
 @import "./setting/mixin";
 @import "./setting/reset";
-@import "./setting/vars";
+@import "./setting/var";
 
 //section
 @import "./section/skip";
