--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -11,3 +11,7 @@
 @import "./section/intro";
 @import "./section/skill";
 @import "./section/site";
+@import "./section/port";
+@import "./section/contact";
+@import "./section/footer";
+
